package com.pucminas.moedaestudantil.model.enums;

public enum TipoTransacao {
    ENVIO,
    RESGATE
}
