package com.pucminas.moedaestudantil.model.enums;

public enum TipoUsuario {
    ALUNO,
    PROFESSOR,
    EMPRESA,
    ADMIN
}
